[package]
name = "eatnodemodules"
version = "0.1.2"
authors = ["FrankKai 20100801@gmail.com"]
edition = "2021"
description = "eat node_modules"
license = "MIT/Apache-2.0"
repository = "https://github.com/FrankKai/eatnodemodules"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"


[[bin]]
edition = "2021"
name = "eatnodemodules"
path = "src/main.rs"